fixed minor issues of button visiblity

--- a/CSS/colors.css
+++ b/CSS/colors.css
@@ -1,3 +1,6 @@
 .error-message {
   background-color: crimson;
 }
+main {
+  background-color: rgba(255, 255, 255, 0.8);
+}
