--- a/CSS/index.css
+++ b/CSS/index.css
@@ -2,9 +2,15 @@
 :root {
   --element-margin-gap-size: 1rem;
 }
+
+body {
+  background: url('../assets/index-background.svg');
+}
 main {
   margin: 0 auto;
+  padding: 5rem 0;
   max-width: 80vw;
+  min-height: 100vh;
   display: grid;
   place-items: center;
 }
@@ -25,8 +31,11 @@ nav > p {
   grid-row: 2 / span 1;
   justify-self: center;
 }
+button:disabled {
+  cursor: not-allowed;
+}
 
-/* Main contents */
+/* Images */
 .images {
   width: 100%;
   display: grid;
@@ -37,14 +46,10 @@ nav > p {
 .image {
   width: 100%;
   height: 100%;
+  border-radius: 10px;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
   object-fit: cover;
   aspect-ratio: 1 / 1;
-}
-.disabled {
-  cursor: disabled;
-}
-.hidden {
-  display: none;
 }
 .loading > img {
   animation: spin 3000ms infinite linear;
@@ -71,4 +76,7 @@ footer {
 .error-message {
   width: 100%;
   height: 100%;
+}
+.hidden {
+  display: none;
 }
